tests/NormalTests/paczka1/fuzzy1/93540126.err
Error in line 13: AM9ypWAkQt A233 34,60
Error in line 7: AM9ypWAkQt A922 76,3
Error in line 23: zlY5vHA A233 86,11
Error in line 19: KYPoHS A922 49,6
Error in line 17: AM9ypWAkQt A233 133,6
Error in line 32: A922 A233 53,32
Error in line 31: AM9ypWAkQt S890 33,0
Error in line 35: zlY5vHA A233 5,2
